<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search artists</string>
    <string name="action_search">Search</string>
    <string name="title_activity_top_ten_track">Top Ten Tracks</string>
    <string name="title_activity_preference">Settings</string>
    <string name="country_code_list_pref_key">country_code</string>
    <string name="default_country_code">US</string>
    <string name="cd_search_icon">Search Icon</string>
    <string name="artist_search_instruction">Find your favourite artist</string>
    <string name="artist_search_detail_instruction">Search for artist, then click on row to see artist\'s top 10 tracks.</string>
    <string name="loading">Loading…</string>
    <string name="cd_artist_image">Artist Image</string>
    <string name="artist_name">Artist Name</string>
    <string name="cd_album_cover">Album Cover</string>
    <string name="album_name">Album Name</string>
    <string name="track_name">Track Name</string>
    <string name="no_results_description">Please check you have the right spelling, or a try a different artist.</string>
    <string name="cd_spotify_icon">Spotify Icon</string>
    <string name="cd_no_results_image">Alert Image</string>
    <string name="next_button_content_description">Play next track</string>
    <string name="play_button_context_description">Play current track</string>
    <string name="pause_button_context_description">Pause current track</string>
    <string name="previous_button_content_description">Play previous track</string>
    <string name="placeholder_album_name">Album Name</string>
    <string name="placeholder_track_name">Track Name</string>
    <string name="placeholder_artist_name">Artist Name</string>
    <string name="initial_time_of_track">0:00</string>
    <string name="placeholder_track_duration">0:30</string>
    <string name="cd_album_cover_image">Album Cover</string>
    <string name="tablet_tag">tablet</string>
</resources>
