<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/placeholder_artist_name"
        android:id="@+id/tvArtistName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/placeholder_album_name"
        android:id="@+id/tvAlbumName"
        android:layout_below="@+id/tvArtistName"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:id="@+id/ivAlbumArt"
        android:layout_below="@+id/tvAlbumName"
        android:contentDescription="@string/cd_album_cover_image" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sbDuration"
        android:layout_below="@+id/tvTrackName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:src="@android:drawable/ic_media_previous"
        android:id="@+id/ivPrevious"
        android:layout_below="@+id/sbDuration"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/previous_button_content_description" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivPlayPause"
        android:background="@android:color/black"
        android:src="@android:drawable/ic_media_play"
        android:layout_alignTop="@+id/ivPrevious"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/play_button_context_description" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:src="@android:drawable/ic_media_next"
        android:id="@+id/ivNext"
        android:layout_alignTop="@+id/ivPlayPause"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/next_button_content_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/placeholder_track_name"
        android:id="@+id/tvTrackName"
        android:layout_below="@+id/ivAlbumArt"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/initial_time_of_track"
        android:id="@+id/tvCurrentTime"
        android:layout_below="@+id/sbDuration"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/placeholder_track_duration"
        android:id="@+id/tvDuration"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/tvCurrentTime" />

</RelativeLayout>