<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/llInstructionScreen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/top_distance"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivSearchIcon"
        android:layout_width="@dimen/default_view_icon_width_height"
        android:layout_height="@dimen/default_view_icon_width_height"
        android:contentDescription="@string/cd_search_icon"
        android:src="@drawable/ic_search_black_24dp" />

    <TextView
        android:id="@+id/tvDescriptionInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_search_instruction"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rvDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/artist_search_detail_instruction"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>
