<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <ProgressBar
        style="@style/listImage"
        android:id="@+id/pbArtistLoadingImage" />
    <ImageView
        android:contentDescription="@string/cd_album_cover"
        android:src="@drawable/ic_search_black_24dp"
        style="@style/listImage"
        android:id="@+id/ivAlbumImage" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivAlbumImage"
        android:layout_toEndOf="@+id/ivAlbumImage"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/album_name"
            android:id="@+id/tvAlbumName"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/track_name"
            android:id="@+id/tvTrackName"/>
    </LinearLayout>

</RelativeLayout>